# cyral-benchmark

./: .gitignore  Dockerfile  README.md  benchmark.py  config.yaml  entrypoint.sh  pyproject.toml  requirements.txt  test_queries.psql  test_queries.sql
load_testing/: config.py  helpers.py  main.py  pg.py
pg/app/: main.py
pg/init/: main.py
pg/user/: config.py  helpers.py  main.py  pg.py  test_queries.sql
scripts/: pg_app_benchmark.py
