[tool.poetry]
name = "load_testing"
version = "0.1.0"
description = ""
authors = ["Ahmed Marzouk <amarzouk@cyral.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
PyYAML = "^5.4.1"
typer = "^0.3.2"
prettytable = "^2.1.0"
tqdm = "^4.60.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
